# Checkers

./: .gitignore  CMakeLists.txt
c++/src/: .Main.cpp.swp  CheckerGame.hpp  Main.cpp
src/: Checkers.hpp
